2007-02-26 Prevent building _wxagg.so with broken Mac OS X wxPython. - ADS

2007-02-23 Require setuptools for Python 2.3 - ADS

2007-02-22 WXAgg accelerator updates - KM
           WXAgg's C++ accelerator has been fixed to use the correct wxBitmap
           constructor.
           
           The backend has been updated to use new wxPython functionality to
           provide fast blit() animation without the C++ accelerator.  This
           requires wxPython 2.8 or later.  Previous versions of wxPython can
           use the C++ acclerator or the old pure Python routines.
           
           setup.py no longer builds the C++ accelerator when wxPython >= 2.8
           is present.
           
           The blit() method is now faster regardless of which agg/wxPython
           conversion routines are used.

2007-02-21 Applied the PDF backend patch by Nicolas Grilly. 
           This impacts several files and directories in matplotlib:
           
           - Created the directory lib/matplotlib/mpl-data/fonts/pdfcorefonts,
             holding AFM files for the 14 PDF core fonts. These fonts are
             embedded in every PDF viewing application.
           
           - setup.py: Added the directory pdfcorefonts to package_data.
           
           - lib/matplotlib/__init__.py: Added the default parameter
             'pdf.use14corefonts'. When True, the PDF backend uses
             only the 14 PDF core fonts.
           
           - lib/matplotlib/afm.py: Added some keywords found in
             recent AFM files. Added a little workaround to handle
             Euro symbol.
           
           - lib/matplotlib/fontmanager.py: Added support for the 14
             PDF core fonts. These fonts have a dedicated cache (file
             pdfcorefont.cache), not the same as for other AFM files
             (file .afmfont.cache). Also cleaned comments to conform
             to CODING_GUIDE.
           